--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" >Navbar</a>
+  <a class="navbar-brand">J10</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" >Next Quiz</a>
+        <a class="nav-link" routerLink="quiz">Next Quiz</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" >My Progress</a>
+        <a class="nav-link" [routerLink]="['progress']">My Progress</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" >My wrting</a>
+        <a class="nav-link" [routerLink]="['writing']">My wrting</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" >My Teachers</a>
+        <a class="nav-link" [routerLink]="['instructors']">My Teachers</a>
       </li>
     </ul>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class="container border">
+  <router-outlet></router-outlet>
+</div>
