routing of quiz

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,16 +8,16 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="quiz">Next Quiz</a>
+          <a class="nav-link" routerLink="quiz" routerLinkActive="active">Next Quiz</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['progress']">My Progress</a>
+          <a class="nav-link" [routerLink]="['progress']" routerLinkActive="active">My Progress</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['writing']">My wrting</a>
+          <a class="nav-link" [routerLink]="['writing']" routerLinkActive="active">My wrting</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['instructors']">My Teachers</a>
+          <a class="nav-link" [routerLink]="['instructors']" routerLinkActive="active">My Teachers</a>
         </li>
       </ul>
     </div>
