--- a/src/app/modules/quiz/quiz.component.html
+++ b/src/app/modules/quiz/quiz.component.html
@@ -1,3 +1,3 @@
-<div class="container border h-100">
-    <router-outlet class="h-100"></router-outlet>
+<div class="border h-100 d-flex align-items-center justify-content-center">
+    <button class="btn btn-primary" routerLink="quizIntroduction">Get Ready</button>
 </div>
