--- a/src/app/modules/progress/progress.component.html
+++ b/src/app/modules/progress/progress.component.html
@@ -1,1 +1,29 @@
-<p>progress works!</p>
+<div class="d-flex flex-column h-100">
+    <nav class="navbar navbar-dark bg-primary w-100">
+        <div>
+            <button class="btn">Print Report</button>
+        </div>
+        <div class="d-flex ">
+            <div>
+                <input class="form-control" placeholder="Begin Date">
+            </div>
+            <div class="pl-2">
+                <input class="form-control" placeholder="End Date">
+            </div>
+            <div class="pl-2">
+                <button class="btn">Apply</button>
+            </div>
+            <div class="pl-2">
+                <button class="btn">Reset</button>
+            </div>
+        </div>
+    </nav>
+    <div class="h-75" >
+        <div class="border mt-3">
+           <app-performance-advertisement></app-performance-advertisement>
+        </div>
+        <div class="border h-100">
+            <app-performance></app-performance>
+        </div>
+    </div>
+</div>
